update links to new domain

--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -5,7 +5,7 @@
       "name": "Kaustav-Portfolio",
       "createdAt": "2024-01-01T00:00:00Z",
       "url": "https://github.com/Kaustav-Sarkar/Kaustav-Portfolio",
-      "deploymentUrl": "https://kaustav-sarkar.com",
+      "deploymentUrl": "https://kaustavsarkar.dev",
       "description": "🚀 My personal portfolio built with React.js. Features responsive design, dynamic theming, and modular architecture for easy customization.",
       "isFork": false,
       "languages": [
